--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ella-burn-ins",
   "version": "0.0.0",
-  "description": "The default blueprint for ember-cli addons.",
+  "description": "Helpers and mixins used by other Emberella addons.",
   "directories": {
     "doc": "doc",
     "test": "tests"
@@ -11,7 +11,7 @@
     "build": "ember build",
     "test": "ember try:testall"
   },
-  "repository": "",
+  "repository": "https://github.com/realityendshere/ella-burn-ins.git",
   "engines": {
     "node": ">= 0.10.0"
   },
