--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ella-burn-ins",
   "version": "0.0.0",
-  "description": "The default blueprint for ember-cli addons.",
+  "description": "Helpers and mixins used by other Emberella addons.",
   "directories": {
     "doc": "doc",
     "test": "tests"
@@ -11,11 +11,11 @@
     "start": "ember server",
     "test": "ember try:testall"
   },
-  "repository": "",
+  "repository": "https://github.com/realityendshere/ella-burn-ins.git",
   "engines": {
     "node": ">= 0.10.0"
   },
-  "author": "",
+  "author": "Dana Franklin",
   "license": "MIT",
   "devDependencies": {
     "broccoli-asset-rev": "^2.1.2",
@@ -37,12 +37,26 @@
     "ember-disable-prototype-extensions": "^1.0.0",
     "ember-try": "0.0.6"
   },
-  "keywords": [
-    "ember-addon"
-  ],
   "dependencies": {
-    "ember-cli-babel": "^5.1.3"
+    "ember-cli-babel": "^5.0.0",
+    "ember-cli-coffeescript": "^0.10.0",
+    "ember-cli-version-checker": "^1.0.2",
+    "lodash": "^3.7.0"
   },
+  "keywords": [
+    "ember-addon",
+    "emberella",
+    "ella",
+    "mixins",
+    "helpers",
+    "remote query bindings",
+    "resize handler",
+    "scroll handler",
+    "style bindings",
+    "debounce",
+    "throttle",
+    "async iterator"
+  ],
   "ember-addon": {
     "configPath": "tests/dummy/config"
   }
